--- a/index.html
+++ b/index.html
@@ -15,7 +15,58 @@
 			<h1>Annual Aguillar Family Wine Festival</h1>
 		</header>
 
-		<div class="container"></div>
+		<div class="container">
+			<table>
+				<thead>
+					<tr>
+						<th colspan="2">
+							<h1>Wine Festival Schedule</h1>
+						</th>
+					</tr>
+					<tr>
+						<th>
+							<h2>Time</h2>
+						</th>
+						<th>
+							<h2>Event</h2>
+						</th>
+					</tr>
+				</thead>
+
+				<tbody>
+					<tr>
+						<td class="left">12:00 PM</td>
+						<td>
+							<h3>Welcome Reception</h3>
+						</td>
+					</tr>
+					<tr>
+						<td class="left">01:00 PM</td>
+						<td>
+							<h3>Storytelling & Tasting</h3>
+						</td>
+					</tr>
+					<tr>
+						<td class="left">02:00 PM</td>
+						<td>
+							<h3>Wine Luncheon</h3>
+						</td>
+					</tr>
+					<tr>
+						<td class="left">03:00 PM</td>
+						<td>
+							<h3>Aguillar Family Wines</h3>
+						</td>
+					</tr>
+					<tr>
+						<td class="left">04:00 PM</td>
+						<td>
+							<h3>Wine & Cheese Tasting</h3>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 
 		<footer>
 			<h3>Contact</h3>
